@@ -37,10 +37,11 @@ inclusion/exclusion of files works, and how to write patterns.</p>
     href="http://oss.software.ibm.com/developerworks/opensource/jikes/project" target="_top">Jikes</a>
     compiler)</li>
   <li>jvc (the Command-Line Compiler from Microsoft's SDK for Java /
-    Visual J++)</li>
+    Visual J++) - microsoft can be used as an alias</li>
   <li>kjc (the <a href="http://www.dms.at/kopi/" target="_top">kopi</a>
     compiler)</li>
   <li>gcj (the gcj compiler from gcc)</li>
+  <li>sj (Symantec java compiler) - symantec can be used as an alias</li>
   <li>extJavac (run either modern or classic in a JVM of its own)</li>
 </ul>
 <p>For JDK 1.1/1.2, classic is the default. For JDK 1.3/1.4, modern is the default.
